[workspace]
members = [".", "dfhack-proto", "dfhack-proto-srcs"]

[workspace.package]
version = "0.8.0"
authors = ["Pierre Lulé <pierre@lule.fr>"]

[package]
name = "dfhack-remote"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Interacting with the Dwarf Fortress remote API exposed by DFHack "
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "game-development", "games"]
exclude = ["images/"]

[dependencies]
protobuf = "=3.4.0"
byteorder = "1.5.0"
num_enum = "0.7.1"
log = "0.4.20"
derive_more = "0.99.17"
dfhack-proto = { version = "0.8.0", path = "dfhack-proto" }
thiserror = "1.0.50"


[dev-dependencies]
bmp = "0.5.0"
ctor = "0.2.5"
lazy_static = "1.4.0"
rand = "0.8.5"
env_logger = "0.11.2"


[features]
test-with-df = ["reflection"]
reflection = ["dfhack-proto/reflection"]
