[workspace]
members = [".", "dfhack-proto", "dfhack-proto-srcs"]

[workspace.package]
version = "0.9.0"
authors = ["Pierre Lulé <pierre@lule.fr>"]

[package]
name = "dfhack-remote"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Interacting with the Dwarf Fortress remote API exposed by DFHack "
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "game-development", "games"]
exclude = ["images/"]

[dependencies]
protobuf = "=3.7.2"
byteorder = "1.5.0"
num_enum = "0.7.3"
log = "0.4.26"
derive_more = { version = "2.0", features = ["display"] }
dfhack-proto = { version = "0.9.0", path = "dfhack-proto" }
thiserror = "2"


[dev-dependencies]
bmp = "0.5.0"
ctor = "0.4.1"
lazy_static = "1.5.0"
rand = "0.9.0"
env_logger = "0.11.7"


[features]
test-with-df = ["reflection"]
reflection = ["dfhack-proto/reflection"]
