[package]
name = "dfhack-proto-srcs"
version = "0.3.1-dev"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Download and extract DFHack protobuf files from source"
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "Zlib"
categories = [
    "api-bindings",
    "game-development",
    "games",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"

[build-dependencies]
reqwest = {version="0.11.10",features=["blocking"]}
zip = "0.6.2"
