[package]
name = "dfhack-proto-srcs"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Download and extract DFHack protobuf files from source"
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "Zlib"
categories = ["api-bindings", "game-development", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"

[build-dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
zip = "2.1.0"
