[package]
name = "dfhack-proto"
version = "0.2.0"
edition = "2021"
authors = ["Pierre Lulé <pierre@lule.fr>"]
description = "Generated code from the DFHack API"
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = [
    "api-bindings",
    "game-development",
    "games",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.27.1"

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
dfhack-proto-srcs = { version = "0.2.0", path = "../dfhack-proto-srcs" }
regex = "1"
heck = "0.4"
quote = "1.0.18"
prettyplease = "0.1.9"
syn = "1.0.91"
