[package]
name = "dfhack-proto"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Generated code from the DFHack API"
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = [
    "api-bindings",
    "game-development",
    "games",
]

[features]
reflection = []

[dependencies]
protobuf = "2.27.1"

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
dfhack-proto-srcs = { version = "0.4.3", path = "../dfhack-proto-srcs" }
regex = "1"
heck = "0.4"
quote = "1.0.18"
prettyplease = "0.1.9"
syn = "1.0.91"
