[package]
name = "dfhack-proto"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Generated code from the DFHack API"
readme = "README.md"
repository = "https://github.com/plule/dfhack-remote"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "game-development", "games"]

[features]
reflection = []

[dependencies]
protobuf = "3.4.0"

[build-dependencies]
protobuf-codegen = "3.4.0"
protobuf = "3.4.0"
dfhack-proto-srcs = { version = "0.8.0", path = "../dfhack-proto-srcs" }
regex = "1"
heck = "0.4"
quote = "1.0.18"
prettyplease = "0.2.4"
syn = "2.0.15"
proc-macro2 = "1.0.56"
