[package]
name = "dfhack-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "2.27.1"
byteorder = "1.4.3"
num_enum = "0.5.7"
log = "0.4.16"
derive_more = "0.99.17"

[build-dependencies]
protobuf-codegen-pure = "2.27.1"
dfhack-proto-srcs = { path = "../dfhack-proto-srcs" }
regex = "1"
heck = "0.4"

[dev-dependencies]
bmp = "0.5.0"
ctor = "0.1.22"
lazy_static = "1.4.0"
portpicker = "0.1.1"
env_logger = "0.9.0"

[features]
test-with-df = []
