[package]
name = "dfhack-remote"
version = "0.1.0"
edition = "2021"

[dependencies]
protobuf = "2.27.1"
byteorder = "1.4.3"
num_enum = "0.5.7"
log = "0.4.16"
derive_more = "0.99.17"
dfhack-proto = { version = "0.1.0", path = "../dfhack-proto" }

[dev-dependencies]
bmp = "0.5.0"
ctor = "0.1.22"
lazy_static = "1.4.0"
rand = "0.8.5"
simple_logger = "2.1.0"

[features]
test-with-df = []
